--- a/index.html
+++ b/index.html
@@ -15,66 +15,75 @@
     />
   </head>
   <body>
-    <!-------------------------- HEADER KISMI ------------------------>
-    <header class="container-fluid bg-warning">
-      <div class="row">
-        <div
-          class="col-12 col-md-6 d-flex align-items-center justify-content-center mb-1 mt-2"
-        >
-          <h2>The Creative Crew</h2>
-        </div>
-        <div class="col-12 col-md-6 mt-1">
-          <p>
-            Who We are <br />
-            We are team of creativly diverse driven, innovative individuals
-            working in various locations from the world.
-          </p>
-        </div>
-      </div>
-    </header>
+    <div class="container genel-kapsayici">
+      <!-------------------------- HEADER KISMI ------------------------>
 
-    <!-------------------------- MAIN KISMI ------------------------>
+      <header class="container-fluid">
+        <div class="row">
+          <div
+            class="col-12 col-md-6 d-flex align-items-center justify-content-center mb-1 mt-3"
+          >
+            <h2>The Creative Crew</h2>
+          </div>
+          <div class="col-12 col-md-5 mt-4 me-1">
+            <p>
+              Who We are <br />
+              We are team of creativly diverse driven, innovative individuals
+              working in various locations from the world.
+            </p>
+          </div>
+        </div>
+      </header>
 
-    <main class="container bg-danger">
-      <div class="row d-flex">
-        <div class="col-6 col-md-4">
-          <div class="resim-kismi">
-            <img src="./images/photo1.png" class="img-thumbnail" alt="" />
-            <p class="isim">Bill Mahoney</p>
+      <!-------------------------- MAIN KISMI ------------------------>
+
+      <main class="container">
+        <div class="row d-flex">
+          <div class="col-6 col-md-4 d-flex">
+            <div class="resim-kismi">
+              <img src="./images/photo1.png" class="img-thumbnail" alt="" />
+              <p class="isim">Bill Mahoney</p>
+            </div>
+            <p class="job">PRODUCTOWNER</p>
+          </div>
+          <div class="col-6 col-md-4 mt-5 d-flex">
+            <div class="resim-kismi">
+              <img src="./images/photo2.png" class="img-thumbnail" alt="" />
+              <p class="isim">Saba Cabrera</p>
+            </div>
+            <p class="job">ARTDIRECTOR</p>
+          </div>
+          <div class="col-6 col-md-4 d-flex">
+            <div class="resim-kismi">
+              <img src="./images/photo3.png" class="img-thumbnail" alt="" />
+              <p class="isim">Shae Le</p>
+            </div>
+            <p class="job">TECHLEAD</p>
+          </div>
+          <div class="col-6 col-md-4 mt-5 mt-md-0 d-flex">
+            <div class="resim-kismi">
+              <img src="./images/photo4.png" class="img-thumbnail" alt="" />
+              <p class="isim">Skylah Lu</p>
+            </div>
+            <p class="job">UX DESIGNER</p>
+          </div>
+          <div class="col-6 col-md-4 mt-md-5 d-flex">
+            <div class="resim-kismi">
+              <img src="./images/photo5.png" class="img-thumbnail" alt="" />
+              <p class="isim">Griff Richards</p>
+            </div>
+            <p class="job">DEVELOPER</p>
+          </div>
+          <div class="col-6 col-md-4 mt-5 mt-md-0 d-flex">
+            <div class="resim-kismi">
+              <img src="./images/photo6.png" class="img-thumbnail" alt="" />
+              <p class="isim">Stan John</p>
+            </div>
+            <p class="job">DEVELOPER</p>
           </div>
         </div>
-        <div class="col-6 col-md-4 mt-5">
-          <div class="resim-kismi">
-            <img src="./images/photo2.png" class="img-thumbnail" alt="" />
-            <p class="isim">Bill Mahoney</p>
-          </div>
-        </div>
-        <div class="col-6 col-md-4">
-          <div class="resim-kismi">
-            <img src="./images/photo3.png" class="img-thumbnail" alt="" />
-            <p class="isim">Bill Mahoney</p>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 mt-5 mt-md-0">
-          <div class="resim-kismi">
-            <img src="./images/photo4.png" class="img-thumbnail" alt="" />
-            <p class="isim">Bill Mahoney</p>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 mt-md-5">
-          <div class="resim-kismi">
-            <img src="./images/photo5.png" class="img-thumbnail" alt="" />
-            <p class="isim">Bill Mahoney</p>
-          </div>
-        </div>
-        <div class="col-6 col-md-4 mt-5 mt-md-0">
-          <div class="resim-kismi">
-            <img src="./images/photo6.png" class="img-thumbnail" alt="" />
-            <p class="isim">Bill Mahoney</p>
-          </div>
-        </div>
-      </div>
-    </main>
+      </main>
+    </div>
 
     <!-- Bootstrap JS Linki -->
     <script
